Dodelki po melocham

--- a/src/UI/Custom/Mdxeditor/Mdxeditor.module.css
+++ b/src/UI/Custom/Mdxeditor/Mdxeditor.module.css
@@ -13,6 +13,7 @@
   overflow: auto; /* Применяем прокрутку только для редактора */
   padding-left: 10px;
   padding-right: 10px;
+  line-height: 1.5;
 }
 
 .toolbar-custom {
