--- a/src/UI/app/MessagesPage/block/Block.module.css
+++ b/src/UI/app/MessagesPage/block/Block.module.css
@@ -13,7 +13,7 @@
 .row span{
     font-family: 'Montserrat';
     color:#FFFFFF;
-    font-size: 10px;
+    font-size: 12px !important;
     font-weight: 400;
     opacity: 0.64;
     cursor:pointer;
