--- a/src/UI/app/ProjectPage/Program/Update/ProgramContent.module.css
+++ b/src/UI/app/ProjectPage/Program/Update/ProgramContent.module.css
@@ -93,6 +93,7 @@
 }
 
 .item {
+    margin-right: 10px;
     width:170px;
     max-width: 170px;
 }
@@ -263,7 +264,7 @@
 
 .itemName span {
     font-style: italic;
-    font-size: 12px;
+    font-size: 12px !important;
     font-family: 'Montserrat';
     font-weight: 400;
 }
