--- a/src/UI/Custom/MyEditor.css
+++ b/src/UI/Custom/MyEditor.css
@@ -11,6 +11,8 @@
   min-width: 750px;
   min-height: 300px;
   color: #000;  
+  font-family: "Montserrat";
+  font-size: 16px;
 }
 
 .demo-toolbar {
