--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -134,14 +134,18 @@
 
 .itemName span {
     font-style: italic;
-    font-size: 12px;
+    font-size: 12px !important;
     font-family: 'Montserrat';
     font-weight: 400;
 }
 
 .select {
+    width:100%;
+    max-width:100%;
     position: relative;
     font-family: 'Montserrat';
+    overflow: hidden;         
+    text-overflow: ellipsis;  
 }
 
 .div {
@@ -328,20 +332,8 @@
 }
 
 .sixth {
-    /* height: 60%;
-    width: 60%;
-    display: flex;
-    flex-direction: row;
-    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin-right: 1%;
-    margin-left: 1%;
-    column-gap: 5px; */
     position: relative;
-    /* margin-right: auto; */
+    margin-left: -30px;
 }
 
 .four span {
@@ -365,7 +357,7 @@
 
 .main {
     position: relative;
-    flex: 1 0 120px; 
+    flex: 1 0 120px;
     overflow-y: auto;
     background-color: #F0F0F0;
     padding-top: 1%;
@@ -500,7 +492,7 @@ textarea::placeholder {
         background-color: white;
 
         &:hover {
-            background-color: rgb(240, 240, 240)
+            background-color: rgb(247, 242, 242);
         }
     }
 }
@@ -512,9 +504,9 @@ textarea::placeholder {
 
 .policySearchItem:hover {
     display: block;
-    background-color: rgb(240, 240, 240);
-    border-radius: 8px; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    background-color: rgb(247, 242, 242);
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .policySearchItem {
@@ -541,7 +533,7 @@ textarea::placeholder {
         background-color: white;
 
         &:hover {
-            background-color: rgb(240, 240, 240)
+            background-color: rgb(247, 242, 242);
         }
     }
 }
@@ -567,7 +559,7 @@ textarea::placeholder {
         background-color: white;
 
         &:hover {
-            background-color: rgb(240, 240, 240)
+            background-color: rgb(247, 242, 242);
         }
     }
 }
@@ -590,9 +582,9 @@ textarea::placeholder {
 
 .policySearchItemNested:hover {
     display: block;
-    background-color: rgb(240, 240, 240);
-    border-radius: 8px; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    background-color: rgb(247, 242, 242);
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .policySearchItemNested {
@@ -765,16 +757,12 @@ textarea::placeholder {
 
 .item {
     margin-right: 10px;
-}
-
-.itemName span {
-    font-style: italic;
-    font-size: 12px;
-    font-family: 'Montserrat';
-    font-weight: 400;
+    width: 170px;
+    max-width: 170px;
 }
 
 .div {
+    width: 100%;
     position: relative;
     display: flex;
 }
@@ -937,11 +925,12 @@ input[type="checkbox"]:checked::before {
 .draftText {
     color: black;
 }
+
 .completedText {
     color: grey;
 }
 
-.headerText{
+.headerText {
     white-space: nowrap;
     font-weight: 600;
     font-family: 'Montserrat';
@@ -949,6 +938,7 @@ input[type="checkbox"]:checked::before {
     font-size: 12px;
     text-align: center;
 }
+
 /* .listUL {
     display: flex;
     flex-direction: row;
