--- a/src/UI/app/PostPage/PostContent.module.css
+++ b/src/UI/app/PostPage/PostContent.module.css
@@ -99,7 +99,7 @@
 
 .itemName span {
     font-style: italic;
-    font-size: 12px;
+    font-size: 12px !important;
     font-family: 'Montserrat';
     font-weight: 400;
 }
