--- a/src/UI/app/ProjectPage/Project/Create/ProjectNew.module.css
+++ b/src/UI/app/ProjectPage/Project/Create/ProjectNew.module.css
@@ -93,7 +93,7 @@
 }
 
 .item {
-    margin-right: 20px;
+    margin-right: 10px;
     width: 170px;
     max-width: 170px;
     overflow: hidden;
@@ -295,7 +295,7 @@
 
 .itemName span {
     font-style: italic;
-    font-size: 12px;
+    font-size: 12px !important;
     font-family: 'Montserrat';
     font-weight: 400;
 }
