--- a/src/UI/app/ProjectPage/Start/Update/StartContent.module.css
+++ b/src/UI/app/ProjectPage/Start/Update/StartContent.module.css
@@ -302,7 +302,7 @@
 
 .itemName span {
     font-style: italic;
-    font-size: 12px;
+    font-size: 12px !important;
     font-family: 'Montserrat';
     font-weight: 400;
 }
