--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,23 @@ html,body{
 	width: 100%;
 	font-size: 100%;
 	line-height: 1;
-	font-size: 14px;
+	font-size: 16px;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	overflow: hidden;
 }
 input,button,textarea{font-family:inherit;}
+
+select,
+button,
+span,
+textarea,
+input {
+    font-size: 16px !important;
+    font-family: "Montserrat";
+}
+
 
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
