--- a/src/UI/Custom/Headers/BottomHeaders/ButtonAction/ButtonAction.module.css
+++ b/src/UI/Custom/Headers/BottomHeaders/ButtonAction/ButtonAction.module.css
@@ -1,55 +1,6 @@
-.imageButton {
+.wrapper {
     display: flex;
     flex-direction: row;
     column-gap: 20px;
     margin-left: auto;
-}
-
-.blockIconAdd {
-    position: relative;
-}
-
-.blockIconAdd:hover::after {
-    content: "Создать";
-    white-space: nowrap;
-    position: absolute;
-    width: 60px;
-    height: 20px;
-    bottom: -120%;
-    left: -80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-}
-
-.icon:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-    cursor: pointer;
-}
-
-.blockIconSavetmp {
-    position: relative;
-}
-
-.blockIconSavetmp:hover::after {
-    content: "Сохранить";
-    white-space: nowrap;
-    position: absolute;
-    width: 80px;
-    height: 20px;
-    bottom: -120%;
-    left: -120%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-    z-index: 20;
 }
