--- a/src/UI/Custom/modalSelectedStatistic/ModalSelectedStatistic.module.css
+++ b/src/UI/Custom/modalSelectedStatistic/ModalSelectedStatistic.module.css
@@ -1,32 +1,71 @@
-
 .modal {
     position: fixed;
-    z-index: 2000;
-    left: 0;
-    top: 0;
+
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+
+    left: 0;
+    top: 0;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    background-color: rgba(0, 0, 0, 0.5);
+
+    z-index: 2000;
 }
 
 .modalWindow {
-    left: 10%;
     position: relative;
+
+    min-height: 330px;
     height: 75vh;
+
+    min-width: 250px;
+    width: 26vw;
     max-width: 26vw;
+
+    left: 10%;
+
+    padding: 10px;
+
     background-color: #fff;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
-    padding: 10px;
+
+    overflow: hidden;
 }
 
-.modalTable {
-    border-collapse: collapse;
-    display: block;
+
+.itemTable {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+
+    margin-bottom: 10px;
+}
+
+.itemRow1 {
+    margin-left: auto;
+}
+
+.itemRow2 {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+
+    margin-left: auto;
+}
+
+.searchModal {
+    width: 150px;
+    height: 22px;
+
+    border-bottom: 1px solid #ccc;
 }
 
 .exitImage {
@@ -39,90 +78,70 @@
 
 
 .modalTable {
-    border-collapse: separate;
-}
-
-.modalTable thead,
-.modalTable tbody {
-    display: block;
-    width: calc(50vw - 20px);
-
-}
-
-.modalTable tbody {
-    max-width: 50vw;
-    height: 65vh;
-    margin-top: 5px;
-    border-radius: 10px;
-
-}
-
-.modalTable tbody tr {
-    display: flex;
-    column-gap: 5px;
+    width: 100%;
 }
 
 .modalTable th {
-    width: calc(25vw - 13.5px);
-    padding: 10px;
-    white-space: nowrap;
-    vertical-align: top;
+    height: 35px;
+    width: 100%;
 
+    border-radius: 10px;
+    background-color: #DDEBF1;
+
+    color: #005475;
+    font-family: 'Montserrat';
+
+
+    white-space: nowrap;
+    vertical-align: center;
 }
 
+
+.modalTable tbody {
+
+    min-height: 270px;
+    height:50vh;
+
+    width: 100%;
+    max-width: 100%;
+
+    border-radius: 10px;
+}
+
+.modalTable tbody tr {
+    min-height: 200px;
+    height: 50vh;
+    width: 100%;
+    max-width: 100%;
+
+    display: block;
+   
+    overflow-y: auto;
+}
+
+
 .modalTable td {
-    width: calc(25vw - 10px);
-    height: calc(65vh - 50px);
+    width: 100%;
+
     display: flex;
     row-gap: 5px;
     flex-direction: column;
-    overflow-y: auto;
+
+
     font-family: 'Montserrat';
     white-space: nowrap;
     vertical-align: top;
 
 }
 
-.modalTable thead th {
-    color: #005475;
-    font-family: 'Montserrat';
-    background-color: #DDEBF1;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    border-radius: 10px;
-}
-
 .row {
-    padding: 5px;
+        
     display: flex;
     align-items: center;
     column-gap: 10px;
+
+    padding: 5px;
+
     background-color: #f0f3f5;
-    border-radius: 10px;
-}
-
-.itemTable {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    margin-bottom: 10px;
-}
-
-.itemRow1 {
-    margin-left: auto;
-}
-
-.itemRow2 {
-    display: flex;
-    flex-direction: row;
-    column-gap: 10px;
-    margin-left: auto;
-}
-
-.searchModal {
-    width: 150px;
-    height: 22px;
-    border-bottom: 1px solid #ccc;
+    border-radius: 10px; 
 }
