--- a/src/UI/app/Constructions/content/Content.module.css
+++ b/src/UI/app/Constructions/content/Content.module.css
@@ -1,5 +1,6 @@
 .content{
     width: 100%;
+    max-width: 100%;
     grid-area: content;
     background: url('../../../image/background.png');
     display: flex;
