--- a/src/UI/Custom/modalSelectRadio/ModalSelectRadio.module.css
+++ b/src/UI/Custom/modalSelectRadio/ModalSelectRadio.module.css
@@ -37,7 +37,7 @@
 }
 
 
-.itemTable {
+.header {
     width: 100%;
     
     display: flex;
@@ -47,11 +47,11 @@
     margin-bottom: 10px;
 }
 
-.itemRow1 {
+.item1 {
     margin-left: auto;
 }
 
-.itemRow2 {
+.item2 {
     display: flex;
     flex-direction: row;
     column-gap: 10px;
@@ -59,14 +59,12 @@
     margin-left: auto;
 }
 
-.searchModal {
+.search {
     width: 150px;
     height: 22px;
-
-    border-bottom: 1px solid #ccc;
 }
 
-.exitImage {
+.exit {
     position: absolute;
     float: right;
     top: -27px;
@@ -75,11 +73,11 @@
 }
 
 
-.modalTable {
+.table {
     width: 100%;
 }
 
-.modalTable th {
+.table th {
     height: 35px;
     width: 100%;
 
@@ -95,7 +93,7 @@
 }
 
 
-.modalTable tbody {
+.table tbody {
     min-height: 270px;
     height: calc(75vh - 130px);
 
@@ -106,7 +104,7 @@
     overflow-y: auto;
 }
 
-.modalTable tbody tr {
+.table tbody tr {
     min-height: 200px;
     height: calc(75vh - 130px);
     width: 100%;
@@ -118,7 +116,7 @@
 }
 
 
-.modalTable td {
+.table td {
     width: 100%;
 
     display: flex;
