--- a/src/UI/app/Chat/section/Section.module.css
+++ b/src/UI/app/Chat/section/Section.module.css
@@ -62,9 +62,16 @@
         & span {
             color: var(--white);
         }
+
+        & svg{
+            fill: var(--white);
+        }
     }
 }
 
+.icon{
+    fill: var(--grey);
+}
 .row {
     padding-left: 12.5px;
 
@@ -89,6 +96,36 @@
 
     & span {
         color: var(--white);
+    }
+
+    & svg{
+        fill: var(--white);
+    }
+}
+
+.controlPanel{
+    width: 100%;
+    height: 36px;
+
+    display: flex;
+    align-items: center;
+    column-gap: 12.5px;
+
+    padding-left: 12.5px;
+
+    background-color: var(--grey-light);
+
+    & svg{
+        width: 24px;
+        height: 24px;
+
+        fill:var(--grey);
+        fill-opacity: 1;
+    }
+
+    & span{
+        color: var(--dark);
+        font-weight: 600;
     }
 }
 
